# Interest-Rate-Visualizer

./: .gitignore  README.md  docker-compose.yml  dokumentacija.md  gunicorn_config.py  hatch.toml  manage.py  pyproject.toml  start_backend.sh  start_etl.sh  start_frontend.sh  start_server.sh
.run/: Docker Compose.run.xml  Run Backend.run.xml  Run ETL.run.xml  Start Backend.run.xml  Start Server.run.xml  Test Frontend.run.xml
docker/: Dockerfile  Dockerfile-backend  Dockerfile-etl  compose.yml
scripts/: docker_compose.sh  run_etl.sh  start_backend.sh  test_frontend.sh
src/: views.py
src/backend/: Dockerfile  __init__.py  __main__.py  asgi.py  config.py  routes.py  settings.py  urls.py  views.py  wsgi.py
src/backend_old/: urls.py
src/common/: __init__.py  month_matcher.py  test.py
src/core/: __init__.py  models.py
src/db/: __init__.py  generic.py  household_loans.py  household_term_deposits.py  housing.py  models.py  non_financial.py  non_financial_loans.py  non_financial_term_deposits.py  non_financial_term_deposits_by_size.py  total_loans.py  total_loans_by_currency.py
src/db/household/: __init__.py  household_loans.py  household_term_deposits.py
src/db/models/: __init__.py  interest_rates.py  loans.py
src/db/non_financial/: __init__.py  non_financial_loans.py  non_financial_term_deposits.py  non_financial_term_deposits_by_size.py
src/db/total/: __init__.py  total_loans.py  total_loans_by_currency.py
src/etl/: Dockerfile  __init__.py  __main__.py  processors.py  test.py
src/frontend/: __init__.py  __main__.py  app.py  views.py
src/frontend/assets/: callbacks.js  style.css
src/frontend/type/: quarter.py  table_type.py
src/frontend_old/: __main__.py  fake_db.py  views.py
src/frontend_old/templates/: dashboard.html
src/frontend_test/: __init__.py  __main__.py
src/templates/: test.html
(+1 files in other folders)
