[project]
name = "WIP"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "django>=5.2",
    "gunicorn>=23.0.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.6",
]

[project.scripts]
# etl = "src.etl.__main__:main"
# visualize = "src.visualize.__main__:main"
