[project]
name = "banking-project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "dash>=3.0.4",
    "dash-bootstrap-components>=2.0.2",
    "django>=5.2",
    "django-plotly-dash>=1.6.5",
    "gunicorn>=23.0.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.45.0",
    "uvicorn>=0.34.2",
    "whitenoise>=6.9.0",
    "xlrd>=2.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.6",
]

[project.scripts]
etl = "src.etl.__main__:main"
# backend = ""
# visualize = "src.visualize.__main__:main"
